Set base layout css

--- a/src/global.scss
+++ b/src/global.scss
@@ -64,6 +64,13 @@ a {
     color: var(--body-color);
 }
 
+p {
+    margin-bottom: 15px;
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
 li {
     list-style-type: none;
 }
