--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -11,7 +11,7 @@
 .container {
     display: flex;
     justify-content: space-between;
-    padding: 7px 15px;
+    padding: 7px 24px 7px 15px;
     height: 100%;
 }
 .logo {
@@ -27,4 +27,10 @@
 .action {
     display: flex;
     align-items: center;
+}
+
+.icDot {
+    margin-left: 20px;
+    padding: 10px;
+    cursor: pointer;
 }
