--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,24 +6,40 @@
     width: 100px;
     min-height: 36px;
     padding: 9px 8px 8px;
-    color: #fff;
     font-size: 16px;
     font-weight: 700;
     border-radius: 4px;
+    background-color: #fff;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+    border: 1px solid #fff;
+    user-select: none;
+    & + .btn {
+        margin-left: 10px;
+    }
 
-    &:hover {
-        opacity: 0.7;
+    &.disable {
+        pointer-events: none;
+        opacity: 0.5;
     }
 
     &.primary {
         background-color: var(--primary);
+        border-color: var(--primary);
+        color: #fff;
+        &:hover {
+            background-color: #fff;
+            color: var(--primary);
+        }
     }
-    &.default {
-        background-color: #cfcfcf;
-        pointer-events: none;
-        cursor: no-drop;
+
+    &.outline {
+        color: var(--primary);
+        background-color: #fff;
+        &:hover {
+            background-color: var(--primary);
+            color: #fff;
+        }
     }
 
     .icLeft {
