--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
-    background-color: #fff;
+    background-color: var(--w-cl);
     border-radius: 20px;
     padding: 10px 0;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba($color: #000, $alpha: 0.16);
+    box-shadow: 0 0 10px rgba($color: var(--b-cl), $alpha: 0.16);
 }
