--- a/src/layouts/components/AccountSearch/AccountSearch.module.scss
+++ b/src/layouts/components/AccountSearch/AccountSearch.module.scss
@@ -21,6 +21,10 @@
     font-weight: 500;
     line-height: 1;
     margin-bottom: 4px;
+    svg {
+        margin-left: 7px;
+        color: #20d5ec;
+    }
 }
 .nickname {
     font-size: 14px;
