--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -4,8 +4,8 @@
     left: 0;
     width: 100%;
     height: 60px;
-    background-color: #fff;
-    box-shadow: 0 0 0 1px rgba($color: #000000, $alpha: 0.12);
+    background-color: var(--w-cl);
+    box-shadow: 0 0 0 1px rgba($color: #000, $alpha: 0.12);
     z-index: 99;
 }
 .container {
@@ -29,8 +29,13 @@
     align-items: center;
 }
 
-.icDot {
+.btnMore {
     margin-left: 20px;
-    padding: 10px;
+    padding: 9px;
     cursor: pointer;
+    font-size: 20px;
+}
+
+.moreMenu {
+    width: 240px;
 }
