--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -30,12 +30,47 @@
 }
 
 .btnMore {
-    margin-left: 20px;
-    padding: 9px;
+    margin-left: 10px;
+    padding: 9px 9px 9px 19px;
     cursor: pointer;
     font-size: 20px;
 }
 
 .moreMenu {
     width: 240px;
+}
+
+.userIcon {
+    margin-right: 20px;
+    font-size: 22px;
+}
+
+.userCloud {
+}
+
+.userPlane {
+}
+
+.userMessage {
+    position: relative;
+    margin-right: 40px;
+    span {
+        position: absolute;
+        top: 0;
+        right: -20px;
+        padding: 2px 5px;
+        font-size: 11px;
+        color: #fff;
+        line-height: 1;
+        background-color: #d03753;
+        border-radius: 100px;
+    }
+}
+
+.userAvatar {
+    width: 46px;
+    height: 46px;
+    img {
+        border-radius: 100%;
+    }
 }
