--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -42,13 +42,15 @@
 
 .userIcon {
     margin-right: 20px;
-    font-size: 22px;
+    font-size: 32px;
+    display: flex;
 }
 
 .userCloud {
 }
 
 .userPlane {
+    font-size: 26px;
 }
 
 .userMessage {
