--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -33,7 +33,7 @@
         }
     }
 }
-.clearn {
+.clear {
     position: absolute;
     right: 53px;
     top: 1px;
@@ -50,6 +50,16 @@
         color: var(--body-color);
     }
 }
+
+@keyframes loading {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .loading {
     position: absolute;
     right: 53px;
@@ -60,7 +70,7 @@
     justify-content: center;
     width: 40px;
     font-size: 100%;
-    display: none;
+    animation: loading 1.6s linear infinite;
 }
 .btn {
     position: absolute;
