--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     padding: 12px 100px 12px 20px;
-    background: rgba(22, 24, 35, 0.06);
+    background: var(--input-search);
     border-radius: 100px;
     border: 1px solid transparent;
     font-size: 100%;
@@ -23,13 +23,13 @@
     transition: all 0.3s ease;
     &:hover {
         & ~ .btn {
-            color: var(--body-color);
+            --ic-search: #161823;
         }
     }
     &:focus {
         border-color: #ccc;
         & ~ .btn {
-            color: var(--body-color);
+            --ic-search: #161823;
         }
     }
 }
@@ -80,7 +80,7 @@
     width: 52px;
     background-color: transparent;
     cursor: pointer;
-    color: #a7a7ab;
+    color: var(--ic-search);
     font-size: 20px;
     padding-top: 2px;
     border-radius: 0 100px 100px 0;
@@ -97,8 +97,8 @@
     }
 
     &:hover {
-        background-color: rgba(22, 24, 35, 0.06);
-        color: var(--body-color);
+        --ic-search: #161823;
+        background-color: var(--input-search);
     }
 }
 
