--- a/src/layouts/components/Sidebar/MfooterSidebar/MfooterSidebar.module.scss
+++ b/src/layouts/components/Sidebar/MfooterSidebar/MfooterSidebar.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+    display: block;
 }
 
 .item {
@@ -10,13 +11,16 @@
 
 .title {
     font-weight: 700;
-    color: black;
+    color: #000;
     opacity: 0.6;
     margin-bottom: 0;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.9;
+    }
 }
 
 .sub {
-    display: flex;
     flex-wrap: wrap;
     display: none;
     li {
