--- a/src/layouts/components/Sidebar/MfooterSidebar/MfooterSidebar.module.scss
+++ b/src/layouts/components/Sidebar/MfooterSidebar/MfooterSidebar.module.scss
@@ -22,7 +22,7 @@
 
 .sub {
     flex-wrap: wrap;
-    display: none;
+    display: flex;
     li {
         margin-right: 10px;
         margin-top: 4px;
