--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -24,19 +24,20 @@
             margin-bottom: 0;
         }
     }
+}
 
-    a {
-        position: relative;
-        display: block;
-        background-color: #fff;
-        text-align: center;
-        padding: 10px 20px;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        &:hover {
-            border-color: rgb(208, 209, 211);
-            background-color: rgb(248, 248, 248);
-        }
+.listBtnItem {
+    position: relative;
+    display: block;
+    background-color: #fff;
+    text-align: center;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    cursor: pointer;
+    &:hover {
+        border-color: rgb(208, 209, 211);
+        background-color: rgb(248, 248, 248);
     }
 }
 
