--- a/src/layouts/components/Sidebar/SuggestedAccounts/SuggestedAccounts.module.scss
+++ b/src/layouts/components/Sidebar/SuggestedAccounts/SuggestedAccounts.module.scss
@@ -40,6 +40,7 @@
         margin-bottom: 0;
         img {
             border-radius: 100%;
+            height: 100%;
         }
     }
     .accountTxt {
