--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -46,11 +46,30 @@
     }
 }
 
-// .back {
-//     position: absolute;
-//     top: 10px;
-//     left: 10px;
-//     font-size: 24px;
-//     padding: 10px;
-//     cursor: pointer;
-// }
+// Logout
+.logoutTitle {
+    text-align: center;
+    font-weight: 700;
+    font-size: 26px;
+}
+
+.logoutBtn {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    button {
+        width: 130px;
+        height: 50px;
+    }
+
+    .btnCancel {
+        background-color: #ff0000;
+        color: #fff;
+        &:hover {
+            background-color: #c90b0b;
+        }
+    }
+
+    .btnLogout {
+    }
+}
