--- a/src/global.scss
+++ b/src/global.scss
@@ -3,6 +3,16 @@
 //Font
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+// Animation
+@keyframes loading {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 :root {
     --font-family: "Roboto", sans-serif;
     --lh: 1.5;
@@ -16,8 +26,11 @@
 
     --input-search: rgba(22, 24, 35, 0.06);
     --ic-search: #a7a7ab;
+
+    --animation-loading: loading 1.2s linear infinite;
 }
 
+//
 .dark-theme {
     --w-cl: #121212;
     --b-cl: #fff;
