--- a/src/components/ViewVideo/Video/Video.module.scss
+++ b/src/components/ViewVideo/Video/Video.module.scss
@@ -1,4 +1,4 @@
-.video {
+.videoBox {
     width: 480px;
     height: 100%;
     video {
@@ -8,7 +8,7 @@
     }
 }
 
-.buttonActionItem {
+.videoAction {
     margin-left: 20px;
 }
 
