--- a/src/components/ViewVideo/Video/Video.module.scss
+++ b/src/components/ViewVideo/Video/Video.module.scss
@@ -1,6 +1,8 @@
 .videoBox {
+    position: relative;
     width: 480px;
     height: 100%;
+    z-index: 0;
     video {
         width: 100%;
         height: 100%;
@@ -74,5 +76,35 @@
         font-weight: 700;
         color: rgba($color: #161823, $alpha: 0.75);
         text-align: center;
+    }
+}
+
+.control {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    color: #fff;
+    padding: 45px 20px 15px;
+
+    .controlPlay {
+        position: absolute;
+        top: 6px;
+        left: 20px;
+        font-size: 20px;
+    }
+    .controlVolume {
+        position: absolute;
+        top: 0;
+        right: 20px;
+        font-size: 25px;
+    }
+    .controlInput {
+    }
+    .controlSlider {
+    }
+    .controlTime {
+        font-size: 14px;
     }
 }
