--- a/src/components/Control/control.module.scss
+++ b/src/components/Control/control.module.scss
@@ -17,7 +17,8 @@
     background: rgba($color: #000, $alpha: 0.4);
     margin: 0 auto;
     width: fit-content;
-    padding: 17px 10px 7px;
+    padding: 15px 5px 15px;
     border-radius: 100px;
     cursor: pointer;
+    height: 100px;
 }
