--- a/src/components/ViewVideo/Video/Video.module.scss
+++ b/src/components/ViewVideo/Video/Video.module.scss
@@ -3,6 +3,7 @@
     width: 460px;
     height: 100%;
     z-index: 0;
+    background-color: wheat;
     video {
         width: 100%;
         height: 100%;
